# rbfx-scaffold

./: .gitignore  .gitmodules  CMakeLists.txt  SummonCMakeGUI.cmd  VS_InitCMake.cmd  VS_InitEnv.cmd
GameApplication/: GameApplication.cpp  GameApplication.h
dep/: CMakeLists.txt
dep/internal/: CMakeLists.txt
